double scroll fixed

--- a/styles/about.module.css
+++ b/styles/about.module.css
@@ -6,15 +6,15 @@
   width: 100;
   min-height: 510px;
   background-color: #ffffff;
-  border: 2px solid red;
-  margin-top: 16rem;
+  /* border: 2px solid red; */
+  margin-top: 2rem;
 }
 
 .contentWrapper {
   display: flex;
   flex-direction: row;
   position: relative;
-  border: 1px solid green;
+  /* border: 1px solid green; */
   height: fit-content;
   width: 100%;
 }
@@ -23,7 +23,7 @@
   display: flex;
   flex-direction: column;
   flex-basis: 50%;
-  border: 1px solid orange;
+  /* border: 1px solid orange; */
   height: fit-content;
   /* width: fit-content; */
   /* width: 5rem; */
