--- a/styles/hero.module.css
+++ b/styles/hero.module.css
@@ -1,30 +1,23 @@
-.heroPhoto {
-
-}
-
-.heroBox {
-  height: 100vw;
-  width: 100vw
-}
-
 .back {
   /* position: absolute; */
   height: 100vh;
   width: 100vw;
   /* border: 2px solid salmon; */
   /* background-attachment: fixed; */
-  left: 0px;
-  top: 0px;
-  z-index: 0;
+  /* left: 0px; */
+  /* top: 0px; */
+  /* z-index: 0; */
 }
 
 .heroWrapper {
-  flex-basis: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  height: auto;
+  /* flex-basis: 100%; */
+  /* display: block; */
+  /* flex-direction: column; */
+  /* justify-content: center; */
+  /* align-items: center; */
+  height: 100vh;
+  /* border: 15px solid red; */
+  position: relative;
 }
 
 .heroContent {
@@ -36,7 +29,7 @@
   /* border: 2px solid yellow; */
   position: relative;
   color: #ffffff;
-  z-index: 2;
+  /* z-index: 2; */
   /* background-color: rgba(0,0,0,.3); */
   /* padding: 20px 20px 20px 20px; */
   /* border-radius: 50px; */
